--- a/Poll/Results.storyboard
+++ b/Poll/Results.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Results Table Table View Controller-->
+        <!--Results-->
         <scene sceneID="dzs-8C-GOK">
             <objects>
-                <tableViewController id="JO0-U7-vMW" customClass="ResultsTableTableViewController" customModule="Poll" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Results" id="JO0-U7-vMW" customClass="ResultsTableTableViewController" customModule="Poll" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Z1m-m5-u1R">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -47,6 +47,7 @@
                             <outlet property="delegate" destination="JO0-U7-vMW" id="mea-XY-jaH"/>
                         </connections>
                     </tableView>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7bD-5j-6g7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
