--- a/Poll/Poll/Combined.storyboard
+++ b/Poll/Poll/Combined.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PFB-UZ-7nr">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -13,17 +13,17 @@
             <objects>
                 <viewController id="PFB-UZ-7nr" customClass="CombinedViewController" customModule="Poll" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OIV-Y0-CSl">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kj5-Ir-u8m">
-                                <rect key="frame" x="16" y="20" width="343" height="323.5"/>
+                            <containerView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kj5-Ir-u8m">
+                                <rect key="frame" x="0.0" y="89" width="414" height="324"/>
                                 <connections>
                                     <segue destination="j6G-UO-RQo" kind="embed" identifier="votingSegue" id="H9o-Kx-R51"/>
                                 </connections>
                             </containerView>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pxI-2q-HJd">
-                                <rect key="frame" x="16" y="343.5" width="343" height="323.5"/>
+                            <containerView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pxI-2q-HJd">
+                                <rect key="frame" x="0.0" y="413" width="414" height="324"/>
                                 <connections>
                                     <segue destination="HPU-fD-mSG" kind="embed" identifier="resultsSegue" id="2lT-IK-Esw"/>
                                 </connections>
@@ -44,6 +44,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k1l-Ay-ZOG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="40.799999999999997" y="362.96851574212894"/>
         </scene>
         <!--Voting-->
         <scene sceneID="OkO-Ey-I9o">
