--- a/Poll/Storyboards/Combined.storyboard
+++ b/Poll/Storyboards/Combined.storyboard
@@ -20,26 +20,26 @@
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gis-1t-WaX">
                                 <rect key="frame" x="0.0" y="20" width="375" height="394"/>
                                 <connections>
-                                    <segue destination="Y5d-jo-80j" kind="embed" identifier="VotingSegue" id="ZlJ-PT-YOe"/>
+                                    <segue destination="Y5d-jo-80j" kind="embed" identifier="votingSegue" id="ZlJ-PT-YOe"/>
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aKT-A6-E6f">
                                 <rect key="frame" x="0.0" y="422" width="375" height="196"/>
                                 <connections>
-                                    <segue destination="biJ-zl-Mo9" kind="embed" identifier="ResultsSegue" id="fR6-E4-Rrw"/>
+                                    <segue destination="biJ-zl-Mo9" kind="embed" identifier="resultsSegue" id="fR6-E4-Rrw"/>
                                 </connections>
                             </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="gis-1t-WaX" secondAttribute="trailing" id="0eh-dP-omY"/>
-                            <constraint firstItem="gis-1t-WaX" firstAttribute="trailing" secondItem="aKT-A6-E6f" secondAttribute="trailing" id="HIN-Dj-NCX"/>
-                            <constraint firstItem="aKT-A6-E6f" firstAttribute="bottom" secondItem="qGc-I4-rZ9" secondAttribute="bottom" id="Spi-RR-G4x"/>
-                            <constraint firstItem="gis-1t-WaX" firstAttribute="top" secondItem="qGc-I4-rZ9" secondAttribute="top" id="Vbl-0j-Yzh"/>
-                            <constraint firstItem="gis-1t-WaX" firstAttribute="leading" secondItem="aKT-A6-E6f" secondAttribute="leading" id="dbn-OF-Ron"/>
-                            <constraint firstItem="aKT-A6-E6f" firstAttribute="top" secondItem="3cd-a7-Z7k" secondAttribute="top" constant="422" id="mAb-G1-yFr"/>
-                            <constraint firstItem="gis-1t-WaX" firstAttribute="leading" secondItem="3cd-a7-Z7k" secondAttribute="leading" id="uaQ-OW-zcF"/>
-                            <constraint firstItem="aKT-A6-E6f" firstAttribute="top" secondItem="gis-1t-WaX" secondAttribute="bottom" constant="8" symbolic="YES" id="yvp-9l-nnu"/>
+                            <constraint firstAttribute="trailing" secondItem="gis-1t-WaX" secondAttribute="trailing" id="PYT-2B-R9y"/>
+                            <constraint firstItem="gis-1t-WaX" firstAttribute="top" secondItem="qGc-I4-rZ9" secondAttribute="top" id="WPw-Y8-6oh"/>
+                            <constraint firstItem="gis-1t-WaX" firstAttribute="leading" secondItem="aKT-A6-E6f" secondAttribute="leading" id="XKR-j1-R0F"/>
+                            <constraint firstItem="aKT-A6-E6f" firstAttribute="bottom" secondItem="qGc-I4-rZ9" secondAttribute="bottom" id="XVm-66-yQZ"/>
+                            <constraint firstItem="gis-1t-WaX" firstAttribute="leading" secondItem="3cd-a7-Z7k" secondAttribute="leading" id="Xb0-pe-N1C"/>
+                            <constraint firstItem="aKT-A6-E6f" firstAttribute="top" secondItem="3cd-a7-Z7k" secondAttribute="top" constant="422" id="j3f-Kq-INE"/>
+                            <constraint firstItem="aKT-A6-E6f" firstAttribute="top" secondItem="gis-1t-WaX" secondAttribute="bottom" constant="8" symbolic="YES" id="pwB-8v-6Se"/>
+                            <constraint firstItem="gis-1t-WaX" firstAttribute="trailing" secondItem="aKT-A6-E6f" secondAttribute="trailing" id="rtE-wt-t3D"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="qGc-I4-rZ9"/>
                     </view>
@@ -55,7 +55,7 @@
                 <viewControllerPlaceholder storyboardIdentifier="Voting" storyboardName="Voting" id="Y5d-jo-80j" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dRN-5y-EpV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="-148"/>
+            <point key="canvasLocation" x="803" y="-166"/>
         </scene>
         <!--Results-->
         <scene sceneID="T3N-lV-JZG">
