--- a/Poll/Poll/Storyboards/Combined.storyboard
+++ b/Poll/Poll/Storyboards/Combined.storyboard
@@ -5,10 +5,11 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Combined View Controller-->
+        <!--Combined-->
         <scene sceneID="HWS-su-TUC">
             <objects>
                 <viewController id="PFB-UZ-7nr" customClass="CombinedViewController" customModule="Poll" customModuleProvider="target" sceneMemberID="viewController">
@@ -40,7 +41,10 @@
                             <constraint firstItem="kj5-Ir-u8m" firstAttribute="top" secondItem="OIV-Y0-CSl" secondAttribute="topMargin" id="vfA-iK-z4Y"/>
                             <constraint firstAttribute="trailingMargin" secondItem="pxI-2q-HJd" secondAttribute="trailing" id="yJB-Ff-E5a"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="tpd-mL-Qk1"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Combined" id="cQH-Wy-IkY"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k1l-Ay-ZOG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
