--- a/Poll/Poll/Storyboards/Voting.storyboard
+++ b/Poll/Poll/Storyboards/Voting.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Voting View Controller-->
+        <!--Vote-->
         <scene sceneID="8Q4-Lj-ET5">
             <objects>
                 <viewController id="FvV-gG-5cm" customClass="VotingViewController" customModule="Poll" customModuleProvider="target" sceneMemberID="viewController">
@@ -61,6 +61,8 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="avC-jk-8R6"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Vote" id="jsH-ak-XbB"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="nameField" destination="dFb-ce-GKr" id="0QF-oU-4Ng"/>
                         <outlet property="responseField" destination="ySw-hS-R86" id="aR8-Ur-k51"/>
